# traccam

./: Cargo.toml
common/: Cargo.toml
common/src/: display.rs  lib.rs  time.rs
common/src/gyro_format/: binary.rs  mod.rs  text.rs
detrac/: Cargo.toml  LOG.CSV
detrac/src/: main.rs
nrf52840/: Cargo.toml
nrf52840/.cargo/: config.toml
nrf52840/src/: imu.rs  main.rs  util.rs
rp2040-gps/: Cargo.toml
rp2040-gps/.cargo/: config.toml
rp2040-gps/src/: main.rs
ssd1306_sim/: Cargo.toml
ssd1306_sim/src/: main.rs
