[workspace]
resolver = "3"
members = ["ssd1306_sim", "common", "rp2040-gps"]

[workspace.dependencies]


nmea = { version = "0.7.0", default-features = false, features = ["defmt-03", "GNSS", "ZDA", "RMC"] }
heapless = "0.9.2"
chrono = { version = "0.4.44", default-features = false }

embedded-graphics = "0.8.2"
embedded-graphics-simulator = "0.8.0"

defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

embassy-executor = { version = "0.9.1", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-sync = { version = "0.7.2", features = ["defmt"] }
embassy-time = { version = "0.5", features = ["defmt", "defmt-timestamp-uptime"] }

embassy-rp = { version = "0.9", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp2040"] }
embedded-io-async = "0.6.1"
ssd1306 = "0.10.0"

traccam_common = {path = "./common"}