[package]
edition = "2024"
name = "traccam_nrf"
version = "0.1.0"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]

# Embassy
embassy-futures = { version = "0.1.2" }
embassy-executor = { version = "0.9.0", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-time = { version = "0.5.0", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-nrf = { version = "0.9.0", features = ["defmt", "nrf52840", "time-driver-rtc1", "gpiote", "unstable-pac", "time"] }

# Embedded HAL
embedded-hal = { version = "1.0" }
embedded-hal-async = { version = "1.0" }
embedded-hal-bus = { version = "0.3.0", features = ["async"] }

# Arch specifics
cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"

# Logging and dev infra
panic-probe = "1.0.0"
defmt = "1.0.1"
defmt-rtt = "1.0.0"

# Rest
traccam_common = { path = "../common"}

# For dev
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false

# For deployment
[profile.release]
codegen-units = 1
debug = 0
strip = true
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false

