[package]
edition = "2024"
name = "rp2040_gps"
version = "0.1.0"
license = "MIT OR Apache-2.0"


[dependencies]
cortex-m = { version = "0.7", features = ["inline-asm"] }
cortex-m-rt = "0.7"

defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

embassy-embedded-hal = { version = "0.5.0", features = ["defmt"] }

embassy-executor = { version = "0.9.1", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-futures = { version = "0.1" }
embassy-sync = { version = "0.7.2", features = ["defmt"] }
embassy-time = { version = "0.5", features = ["defmt", "defmt-timestamp-uptime"] }

embassy-rp = { version = "0.9", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp2040"] }
portable-atomic = { version = "1.5.1", features = ["critical-section"] }
heapless = "0.9.2"
nmea = { version = "0.7.0", default-features = false, features = ["defmt-03", "GNSS", "ZDA", "RMC"] }
embedded-alloc = "0.7.0"
embedded-io-async = "0.6.1"
ssd1306 = "0.10.0"
embedded-graphics = "0.8.2"
traccam_common = { path = "../common", version = "0.1.0", features = [] }
embedded-sdmmc = "0.9.0"
embedded-hal-bus = "0.3.0"
log = "0.4.29"

# For dev
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false

# For deployment
[profile.release]
codegen-units = 1
debug = 0
strip = true
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
